# pain

./: CMakeLists.txt  README.md  pain.cpp  pain.h
tests/: CMakeLists.txt  test-arithmetic.cpp
